examples/error-codes/violates-constraint/fatal/CV-CER6-bad-static.output
CV-CER6-bad-static.c:6:2: error: Unary '*' operator applied to non-pointer.
  Constraint violation (CV-CER6). See C11 sec. 6.5.3.2:2
Translation failed (config dumped). Run kcc -d CV-CER6-bad-static.c to see commands run.
