examples/error-codes/violates-constraint/fatal/CV-CER6-bad-static.c
struct a {
	int b;
} a;
 
int main(void){
	int c = &a->b;
}
